[package]
name = "war3mdlx"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"], registry = "aliyun" }
byteorder = { version = "1", registry = "aliyun" }
walkdir = { version = "2", registry = "aliyun" }
glam = { version = "0.30.9", registry = "aliyun" }
derive-debug = { version = "0.1.2", registry = "aliyun" }
pretty-hex = { version = "0.4.1", registry = "aliyun" }
paste = { version = "1.0.15", registry = "aliyun" }
bitflags = { version = "2.10.0", registry = "aliyun" }
regex = { version = "1.12.2", registry = "aliyun" }
path-clean = { version = "1.0.1", registry = "aliyun" }
pest = { version = "2.8.4", registry = "aliyun" }
pest_derive = { version = "2.8.4", registry = "aliyun" }
