[package]
name = "War3Mdlx"
version = "1.0.0"
edition = "2024"
authors = ["zengfanfan"]
homepage = "https://github.com/zengfanfan/war3mdlx"
repository = "https://github.com/zengfanfan/war3mdlx"
license = "GPL-3.0"

[[bin]]
name = "war3mdlx"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"], registry = "tuna" }
byteorder = { version = "1", registry = "tuna" }
walkdir = { version = "2", registry = "tuna" }
glam = { version = "0.30.9", registry = "tuna" }
derive-debug = { version = "0.1.2", registry = "tuna" }
pretty-hex = { version = "0.4.1", registry = "tuna" }
paste = { version = "1.0.15", registry = "tuna" }
bitflags = { version = "2.10.0", registry = "tuna" }
regex = { version = "1.12.2", registry = "tuna" }
path-clean = { version = "1.0.1", registry = "tuna" }
pest = { version = "2.8.4", registry = "tuna" }
pest_derive = { version = "2.8.4", registry = "tuna" }
chrono = { version = "0.4.42", registry = "tuna" }
smart-default = { version = "0.7.1", registry = "tuna" }
